# xtree

./: .gitignore  LICENSE  README.md  pyproject.toml
xtree/: __init__.py  __main__.py  cli.py  xtree.py
