[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fadi-xtree"
version = "0.2.0"
description = "Directory tree generator"
readme = "README.md"
authors = [{name = "1fadi"}]
license = {file = "LICENSE"}
keywords = ["tree", "diagram", "terminal"]
requires-python = ">=3.7"

[project.scripts]
tree = "xtree.__main__:main"
